# graphs-fire-spreading-simulation

./: README.md  pyproject.toml
output/: .keep
src/: __main__.py  app.py  utils.py
src/events/: __init__.py  event.py
src/fire/: __init__.py  allocator.py  firefighter.py  firetruck.py
src/graphs/: __init__.py  functions.py  graph.py  search.py
src/logs/: __init__.py  logger.py  path.py  timer.py  water_counter.py
src/maps/: __init__.py  auto_map.py  input_map.py
