[project]
name = "graph-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "ruff (>=0.11.2,<0.12.0)"
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
